Align maps bar with first destination header, fix padding

--- a/on-the-road.css
+++ b/on-the-road.css
@@ -45,6 +45,7 @@ body {
 .dest-body {
     max-height: 200vh;
     transition: max-height 0.3s ease;
+    padding-right: 2ex;
 }
 .destination:not(.selectedDest) .dest-body {
     max-height: 0;
@@ -54,11 +55,16 @@ body {
     padding-left: 0.75em;
 }
 .header {
+    height: 54px;
+    box-sizing: border-box;
     color: white;
     user-select: none;
     font-size: 1.3em;
     font-weight: 600;
     padding: 0.5em 1em;
+
+    display: flex;
+    align-items: center;
 }
 .destination:nth-child(1n) .header {
     background: #7d6b91;
@@ -78,6 +84,7 @@ body {
 .header::before {
     content: counter(headers) ": ";
     counter-increment: headers;
+    margin-right: 1ex;
 }
 .quote {
     font-style: italic;
@@ -89,7 +96,6 @@ body {
         margin-left: auto;
         margin-right: auto;
 }
-
 .top-bar p {
         font-size: 1.2em;
 }
